Flavor Event + New idea icons
great mod

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5568,6 +5568,10 @@ ww1_romania.65.desc:0 "The Great War, a war that ravaged Europe for many years, 
 ww1_romania.65.a:0 "Finally, let's move on."
 ROM_investigate_bureaucratic_corruption:0 "Investigate Bureaucratic Corruption"
 ROM_investigate_bureaucratic_corruption_desc:0 ""
+ww1_romania.66.t:0 "The Enescu Prize"
+ww1_romania.66.desc:0 "Romania's cultural scene is thriving, with its young talents eager to make their mark. Renowned composer George Enescu established the Enescu Prize this year, a prestigious award to recognize the most promising Romanian composers of our time. The event gathered the cultural elite at Bucharest, to celebrate local music and hyping up Romanian pride. This year's winner was Ion Nonna Otescu."
+ww1_romania.66.a:0 "They are all making Romania proud."
+ROM_alexandru_c_cuza:0 "Alexandru Constantin Cuza"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
