--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -2810,7 +2810,7 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  ROM_mandated_insurance1:0 "Mandated Insurance"
  ROM_kings_influence:0 "The Political King"
  ROM_influence_of_the_church:0 "Influence of the Church"
- ROM_corruption_purges:0 "Corruption purges"
+ ROM_corruption_purges:0 "Corruption Purges"
  ROM_balance_budget:0 "Budget Balancing"
  ROM_bite_and_hold:0 "Bite and Hold"
  ROM_research_investments:0 "Research Investments"
