--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -460,11 +460,12 @@
  administration_reformer:0 "Administration Reformer"
  judicial_reformer:0 "Judicial Reformer"
  Industrialist:0 "Industrialist"
-scholarly_statesman:0 "Scholarly Statesman"
-modernizer:0 "Modernizer"
-diplomatic_stabilizer:0 "Diplomatic stabilizer"
-member_of_PC:0 "Member of §cPC§!"
-member_of_PNL:0 "Member of §lPNL§!"
-member_of_PSDR:0 "Member of §rPSDR§!"
-member_of_PND:0 "member of §qPND§!"
-democratic_coalition:0 "Democratic Coalition"
+ scholarly_statesman:0 "Scholarly Statesman"
+ modernizer:0 "Modernizer"
+ diplomatic_stabilizer:0 "Diplomatic stabilizer"
+ member_of_PC:0 "Member of §cPC§!"
+ member_of_PNL:0 "Member of §lPNL§!"
+ member_of_PSDR:0 "Member of §rPSDR§!"
+ member_of_PND:0 "member of §qPND§!"
+ democratic_coalition:0 "Democratic Coalition"
+ left_wing_publisher:0 "Left Wing Publisher"
