Great War Air Doctrine

--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -121,6 +121,16 @@
  early_fire_control_system:0 "Early Fire Control System"
  early_fire_control_system_desc:0 "Early fire control systems were created on the basis of original mechanical computing devices. In a way, they were giant calculators for calculating range or direction."
  # LAND DOCTRINES
+ TITLE_WW1_LANDDOCTRINE:0 "Great War Era Doctrine"
+ WW1_LANDDOCTRINE_DESC:0 "The Franco-Prussian War has defined the totality of modern warfare, while the Russo-Japanese War has shown the importance of fortification.\nA big war will put many tactics to the test..."
+ BITE_AND_HOLD_LABEL:0 "BITE AND HOLD"
+ BITE_AND_HOLD_LABEL_TT:0 "Improve breakthrough and organization of leg infantry."
+ DEFENSE_IN_DEPTH_LABEL:0 "DEFENSE IN DEPTH"
+ DEFENSE_IN_DEPTH_LABEL_TT:0 "Improve defence of army."
+ ARMORED_SUPPORT_LABEL:0 "ARMORED SUPPORT"
+ ARMORED_SUPPORT_LABEL_TT:0 "Improve breakthrough and soft attack of armored units."
+ MATERIALSCHLACHT_LABEL:0 "BATTLE OF MATERIAL"
+ MATERIALSCHLACHT_LABEL_TT:0 "Improve breakthrough and soft attack of leg infantry."
  ww1_landdoctrine:0 "Cult of the Offensive"
  ww1_landdoctrine_desc:0 "The offensive capabilities of modern armies became so vast, the defense has proven to be almost obsolete. We must focus on concentrating all our efforts on the offensive, making the only viable method of defense a counter-attack. The élan vital of our soldiers is the key to winning a modern war."
  ww1_lead_by_order:0 "Lead by Order"
@@ -147,6 +157,36 @@
  ww1_artillery_support_desc:0 "Unfortunately, we failed to understand the value of some great technological advancements like armored cars or tanks on time. Being outnumbered in the new technology by enemy, we can make up for that by focusing on supplying our infantry with more submachine guns, steel helmets, grenades and artillery support. The better material will win the war, and our industry will provide it."
  ww1_combined_arms:0 "Combined Arms"
  ww1_combined_arms_desc:0 "Tanks, gas and aviation have changed the face of modern war forever. With the new technologies and techniques developed to secure an edge over the enemy it had became clear, that attrition warfare is no longer a viable strategy to win this war. Instead, we will throw all arms at the enemy to secure the victory in a single offensive along the entire frontline."
+ # AIR DOCTRINES
+ TITLE_WW1_AIRDOCTRINE:0 "Great War Era Doctrine"
+ WW1_AIRDOCTRINE_DESC:0 "The emergence of heavier-than-air flight presaged the change in the character of warfare."
+ ww1_airdoctrine:0 "Observation Balloons"
+ ww1_airdoctrine_desc:0 ""
+ ww1_aerial_messengers:0 "Aerial Messengers"
+ ww1_aerial_messengers_desc:0 ""
+ ww1_airdropped_bombs:0 "Airdropped Bombs"
+ ww1_airdropped_bombs_desc:0 ""
+ ww1_naval_aviation:0 "Naval Aviation"
+ ww1_naval_aviation_desc:0 ""
+ ww1_strategic_bombing:0 "Strategic Bombing"
+ ww1_strategic_bombing_desc:0 ""
+ ww1_tactical_bombing:0 "Tactical Bombing"
+ ww1_tactical_bombing_desc:0 ""
+ ww1_aerial_demoralization:0 "Aerial Demoralization"
+ ww1_aerial_demoralization_desc:0 ""
+ ww1_flying_aces:0 "Flying Aces"
+ ww1_flying_aces_desc:0 ""
+ ww1_improved_training:0 "Improved Training"
+ ww1_improved_training_desc:0 ""
+ ww1_night_operations:0 "Night Operations"
+ ww1_night_operations_desc:0 ""
+ ww1_army_air_corps:0 "Army Air Corps"
+ ww1_army_air_corps_desc:0 ""
+ ww1_independent_air_force:0 "Independent Air Force"
+ ww1_independent_air_force_desc:0 ""
+ ww1_twilight_of_the_airship:0 "Twilight of the Airship"
+ ww1_twilight_of_the_airship_desc:0 ""
+
  
  motorised_infantry2:0 "Motorised Infantry"
  motorised_infantry2_desc:0 "By extending the use of motor vehicles in infantry transports in the field, the mobility of otherwise slow-moving infantry units can be greatly improved, enabling faster responses and new strategies."
