--- a/localisation/english/equip_air_l_english.yml
+++ b/localisation/english/equip_air_l_english.yml
@@ -37,11 +37,11 @@
  scout_plane_equipment_3_desc:0 "By developing dedicated planes for aerial surveillance and long-range reconnaissance, we ensure that we gain and maintain an accurate picture of our opponent's intentions and capabilities."
  scout_plane_equipment_3_short:0 "Recon Plane III"
  aerial_bombs:0 "Aerial Bombs"
- aerial_bombs_desc:0 "A bomb can be loaded onto aeroplanes so that it can be dropped from the above and hit a ground target. Bombs can now be attached to the fuselage instead of being hand-thrown by the crew."
+ aerial_bombs_desc:0 "A bomb can be loaded onto aeroplanes so that it can be dropped from the above and hit a ground target. Bombs can now be attached to the fuselage instead of being hand-thrown by the crew. \n$allow_bomber_techs$"
  synchronizer:0 "Synchronizer"
- synchronizer_desc:0 "A gun synchronizer or interrupter gear is a device enabling a single-engine tractor configuration aircraft to fire its forward-firing armament through the arc of its spinning propeller without bullets striking the blades. This allows the aircraft, rather than the gun, to be aimed at the target."
- allow_fighter_and_seaplane_techs:0 "Allow to Research §YFighters§! and §YSeaplanes§!."
- allow_bomber_techs:0 "Allow to Research §YLight Bombers§! and §YHeavy Bombers§!."
+ synchronizer_desc:0 "A gun synchronizer or interrupter gear is a device enabling a single-engine tractor configuration aircraft to fire its forward-firing armament through the arc of its spinning propeller without bullets striking the blades. This allows the aircraft, rather than the gun, to be aimed at the target.\n$allow_fighter_and_seaplane_techs$"
+ allow_fighter_and_seaplane_techs:0 "Allows to research §YFighters§! and §YSeaplanes§!."
+ allow_bomber_techs:0 "Allows to research §YLight Bombers§! and §YHeavy Bombers§!."
  fighter_equipment_0:0 "Early Fighter"
  fighter_equipment_0_short:0 "Early Fighter"
  fighter_equipment_0_desc:0 "It hasn't been long since these flying machines were invented. And it hasn't been that long since we thought of taking these to war. But we guess there must be some use."
