--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4970,7 +4970,29 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.35.t:0 "Central Committee Blocks Halide Edib Hanım's Departure"
  ottoman_syria.35.d:0 "As we're trying to pursue new ways to improve the education of Syria, we've sent an invite to Halide Edib Hanım to help us with women's education. Though herself agreed, the Central Committee has prevented her from departing from [TUR.capital.GetName]. Unfortunately, we won't be able to benefit from her experties."
  ottoman_syria.35.a:0 "Unfortunately, we'll have to work with what we have in our hands."
-
+ ottoman_syria.36.t:0 "Negotiations with the Sharifian Revolt"
+ ottoman_syria.36.d:0 "Due to the British meddling, and maybe slightly because of our centralization policies, the Sharif and Emire of Mecca Hussein bin Ali has started his outright revolt. While its taking for some time for the central government to crush this rebellion, we can intervene in the situation and find a solution.\nWe can propose Sharif Hussein several things. We can declare general amnesty and forgive the Sharif, we can promise to revert centralization efforts and go back to the dual structure that was present in the region in 1872, or we can recognize his authority in the region and let him rule hejaz as an autonomous vilayet. We can outright refuse to negotiate with the traitors and crush the revolt by force."
+ ottoman_syria.36.a:0 "Grant them amnesty, they should be grateful enough."
+ ottoman_syria.36.b:0 "Guaranteeing 1872 status and the dual structure in the region should be enough."
+ ottoman_syria.36.c:0 "Recognize the Sharifate of Mecca, under the Ottoman Caliph of course."
+ ottoman_syria.36.d:0 "No negotiations with the traitors."
+ ottoman_syria.37.t:0 "[TRS.GetLeader] Offer Amnesty"
+ ottoman_syria.37.d:0 "As Ahmed Cemâl Paşa, a high ranking Ottoman official stationed in Syria, has come to us with the intention of negotiating an end to the revolt, he offered us an option to establish peace. He promised us amnesty in exchange for us to lay down our weapons. Though it's an easy way to achieve peace, this will result in a failure to achieve the demands of the revolt."
+ ottoman_syria.37.a:0 "This revolt has been dragging our for too long."
+ ottoman_syria.37.b:0 "We can't trust their words."
+ ottoman_syria.38.t:0 "[TRS.GetLeader] a Return to 1872 Status"
+ ottoman_syria.38.d:0 "As Ahmed Cemâl Paşa, a high ranking Ottoman official stationed in Syria, has come to us with the intention of negotiating an end to the revolt, he offered us an option to establish peace. He promised us a return to the status of 1872, basically a return to the status quo, in exchange for us to lay down our weapons. While it will secure us some autonomy, the revolt is going for too long to go back to the old order."
+ ottoman_syria.38.a:0 "That's something we can agree with."
+ ottoman_syria.38.b:0 "Back to status quo so we can get surpressed again?"
+ ottoman_syria.39.t:0 "[TRS.GetLeader] Autonomy"
+ ottoman_syria.39.d:0 "As Ahmed Cemâl Paşa, a high ranking Ottoman official stationed in Syria, has come to us with the intention of negotiating an end to the revolt, he offered us an option to establish peace. He promised us a wide range of autonomy in the region, with freedom in our internal affairs. Though this can be the best offer we can get, nothing is better than outright independence."
+ ottoman_syria.39.a:0 "This is better than what we can ask for."
+ ottoman_syria.39.b:0 "Question of autonomy is long gone, we fight for full liberation!"
+ ottoman_syria.40.t:0 "Hussein Accepts our Offer"
+ ottoman_syria.40.d:0 "As the Sharifian Revolt drags on, we've paid a visit to Sharif Hussein to propose a settlement. To our fortunre, it seems like the head figure of the revolt Hussein bin Ali has found our proposals resonable enough to put an end to the revolt."
+ ottoman_syria.40.a:0 "Hussein back into the fold."
+ ottoman_syria.41.t:0 "Hussein Refused our Offer"
+ ottoman_syria.41.d:0 "Hussein has refused our offer to end the revolt. If we still have other options to please the revolters and put an end to this revolt, we still can push forward with it. Yet can also refuse to have further talks and proceed with force."
  ottoman_syria.42.t:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
  ottoman_syria.42.d:0 "As Ahmed Cemâl Paşa took it upon himself to end the Sharif Hussein's revolt, he'll be conducting negotiations with the revolt's leadership. For the duration of that, we'll be in an armistice."
  ottoman_syria.42.a:0 "Let's see where this ends up."
