--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1096,6 +1096,10 @@
  TRS_mobile_headquarters_dm_desc:0 "As Ahmed Cemâl Paşa is currently located in this province, his presence boosts friends and deters foes.\n\n§RLosing control of this state will displace Ahmed Cemâl Paşa to a random neighboring state that we control§!"
  TRS_armistice_in_the_revolt:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
  TRS_armistice_in_the_revolt_desc:0 "Ever since the start of the Sharifian Revolt, the bearers of the Arab Revolt flag has been struggling against their old overlords. As peace talks are underway, perhaps things could settle well."
+ TRS_armistice_in_the_revolt_instant_desc:0 "§RWill be removed if we're no longer at war with [HJZ.GetName]§!"
+ HJZ_armistice_in_the_revolt:0 "Armistice between the Ottoman Empire and the Sharifian Revolt"
+ HJZ_armistice_in_the_revolt_desc:0 "Ever since the start of the Sharifian Revolt, the bearers of the Arab Revolt flag has been struggling against their old overlords. As peace talks are underway, perhaps things could settle well."
+ HJZ_armistice_in_the_revolt_instant_desc:0 "§RWill be removed if we're no longer at war with [TUR.GetName]§!"
 
  AUH_austrian_integration:0 "Austrian Integration"
  AUH_condominium_of_bosnia_and_herzegovina:0 "Condominium of Bosnia and Herzegovina"
