--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -15339,7 +15339,7 @@ ww1_BUL_TUR.52.t: "Border Migration"
 ww1_BUL_TUR.52.d: "With the growing instability in the region, a significant portion of the population is moving from Turkish-controlled territories to the Bulgarian state of Plovdiv. This influx of people could provide more manpower to Bulgaria, though it may also bring with it social and logistical challenges."
 ww1_BUL_TUR.52.a: "Well, welcome to Plovdiv."
 
-ww1_BUL_TUR.53.t: "Border Migration #2: Turkish Exodus"
+ww1_BUL_TUR.53.t: "Border Migration"
 ww1_BUL_TUR.53.d: "The chaos near the Bulgarian border has forced Turkish citizens to flee from their homes. The movement of people may affect Turkey’s manpower reserves and complicate efforts to maintain order in the region."
 ww1_BUL_TUR.53.a: "Well, ok."
 
@@ -15354,3 +15354,15 @@ ww1_BUL_TUR.55.a: "Interesting."
 ww1_BUL_TUR.56.t: "Border Migration"
 ww1_BUL_TUR.56.d: "The recent instability has caused a final wave of migration, with thousands of people fleeing towards Sofia. This wave could strengthen Bulgaria’s workforce but also exacerbate tensions along the border."
 ww1_BUL_TUR.56.a: "Welcome to Sofia."
+
+ ww1_BUL_TUR.58.t: "Are They Satisfied Yet?"
+ ww1_BUL_TUR.58.d: "The Bulgarians await a response from the Turks. Are they willing to settle their claims over Macedonia, or are more negotiations needed?"
+ ww1_BUL_TUR.58.a: "Convene Geshov"
+
+ ww1_BUL_TUR.59.t: "Asim Bey Asks if Macedonia Quenches Our Thirst"
+ ww1_BUL_TUR.59.d: "Asim Bey questions Bulgaria's intentions regarding the Macedonian territory. Can Bulgaria really settle for what has been offered?"
+ ww1_BUL_TUR.59.a: "We Can't Make Such Commitments"
+ 
+ ww1_BUL_TUR.60.t: "Geshov Says that Bulgaria Can't Make Such Permanent Commitments"
+ ww1_BUL_TUR.60.d: "Geshov's statement has left the Turkish representatives uncertain. Bulgaria is unwilling to commit to long-term territorial agreements regarding Macedonia. This indecision may strain further negotiations."
+ ww1_BUL_TUR.60.a: "What Does This Even Mean?"
