more ideas and tweaks

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1917,7 +1917,12 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
  AST_white_australia_1:0 "White Australia"
  AST_angloification_1:0 "Angloification"
  AST_pensions_1:0 "Pensions"
- 
+ #Feudal
+FEU_unstable_agriculture:0 "Unstable Agriculture"
+FEU_unstable_agriculture_desc:0 "With an unmodernised agricultural system, we still rely heavily on what the seasons will bring and all it takes to cause a shortage of food is a drier season then usual."
+FEU_mass_illiteracy:0 "Mass Illiteracy"
+FEU_mass_illiteracy_desc:0 "In our nation, most of the population are illiterate and can't read. This poses a signifcant problem as most of our population is uneducated on many basic things and limits us in many ways."
+
  #UK
  ENG_Staff:0 "English Staff"
  ENG_Staff_desc:0 "The British Army during the Great War could trace its organisation to the increasing demands of imperial expansion. The framework was the voluntary system of recruitment and the regimental system, which had been defined by the Cardwell and Childers Reforms of the late 19th century. The British Army had been prepared and primarily called upon for Empire matters and the ensuing colonial wars. In the last years of the 19th century, the Army was involved in a major conflict, the Second Boer War (1899-1902), which highlighted shortcomings in its tactics, leadership and administration. "
