--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -488,6 +488,9 @@ FEU_the_adjective_regional_development_fund:0 "The [ROOT.GetAdjective] Developme
 FEU_efficent_farming:0 "Efficent Farming Techniques"
 FEU_state-funded_projects:0 "Urbanisation of [ROOT.Capital.GetCapitalVictoryPointName]"
 FEU_improved_irrigation_systems:0 "Improved Irrigation Systems"
+FEU_promote_local_crafts:0 "Promote Local Crafts"
+FEU_urban_education:0 "Urban Education"
+FEU_the_grand_university_of_capital:0 "The University of [ROOT.Capital.GetCapitalVictoryPointName]"
 
  ##########
 
