Industrial Tree and Advisor On Add/On Remove

--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -424,7 +424,7 @@
  STATE_423: "Madurai"
  STATE_424: "Madras"
  STATE_425: "Mysore"
- STATE_426: "Vizagapatam"
+ STATE_426: "Eastern States"
  STATE_427: "Hyderabad"
  STATE_428: "Gujarat"
  STATE_429: "Bombay"
@@ -434,14 +434,14 @@
  STATE_433: "Rajputana"
  STATE_434: "Aruna Mountains"
  STATE_435: "Bihar-Orissa"
- STATE_436: "Jabalpur"
- STATE_437: "Indore"
- STATE_438: "Lucknow"
+ STATE_436: "Central Provinces"
+ STATE_437: "Central India"
+ STATE_438: "United Provinces"
  STATE_439: "Delhi"
  STATE_440: "Punjab"
  STATE_441: "Kashmir"
- STATE_442: "Peshawar"
- STATE_443: "Sind"
+ STATE_442: "North-West Frontier"
+ STATE_443: "Sindh"
  STATE_444: "Baluchistan"
  STATE_445: "Quetta"
  STATE_446: "Cairo"
