--- a/localisation/english/replace/replace_strategic_region_names_l_english.yml
+++ b/localisation/english/replace/replace_strategic_region_names_l_english.yml
@@ -31,6 +31,7 @@
  STRATEGICREGION_150:0 "Russian Far North"
  STRATEGICREGION_154:0 "Japanese Archipelago"
  STRATEGICREGION_155:0 "Manchuria"
+ STRATEGICREGION_190:0 "North-West Frontier"
  STRATEGICREGION_191:0 "Turkestan"
  STRATEGICREGION_192:0 "Novorossiya"
  STRATEGICREGION_196:2 "Arabia"
