AIR DOCTRINE LOC SUSWAVE990

--- a/localisation/english/ww1_research_l_english.yml
+++ b/localisation/english/ww1_research_l_english.yml
@@ -161,31 +161,31 @@
  TITLE_WW1_AIRDOCTRINE:0 "Great War Era Doctrine"
  WW1_AIRDOCTRINE_DESC:0 "The emergence of heavier-than-air flight presaged the change in the character of warfare."
  ww1_airdoctrine:0 "Observation Balloons"
- ww1_airdoctrine_desc:0 ""
+ ww1_airdoctrine_desc:0 "Observation balloons provide an advantage for military intelligence. These tethered balloons use binoculars and early photographic equipment, allowing them to scout enemy positions and direct artillery fire accurately."
  ww1_aerial_messengers:0 "Aerial Messengers"
- ww1_aerial_messengers_desc:0 ""
+ ww1_aerial_messengers_desc:0 "Aerial Messages have greatly affected and modernized coordination allowing for more effective command and control of military operations. This innovation bolsters our abilities in combat."
  ww1_airdropped_bombs:0 "Airdropped Bombs"
- ww1_airdropped_bombs_desc:0 ""
+ ww1_airdropped_bombs_desc:0 "Used as a means to neutralize targets; airdropped bombs deal critical damage to enemy morale, as well as their ability to fight effectively." 
  ww1_naval_aviation:0 "Naval Aviation"
- ww1_naval_aviation_desc:0 ""
+ ww1_naval_aviation_desc:0 "With the increase in naval developments across the entire world; aircraft are modernized, and repurposed to deal with threats across all types of waterbodies alike."
  ww1_strategic_bombing:0 "Strategic Bombing"
- ww1_strategic_bombing_desc:0 ""
+ ww1_strategic_bombing_desc:0 "As bombing is becoming more common, bombing plans evolve with each bombing, yielding greater devastation across military threats on the surface."
  ww1_tactical_bombing:0 "Tactical Bombing"
- ww1_tactical_bombing_desc:0 ""
+ ww1_tactical_bombing_desc:0 "Military Tacticans evolve their tactics based on how they bomb to disable military advantages of enemy forces"
  ww1_aerial_demoralization:0 "Aerial Demoralization"
- ww1_aerial_demoralization_desc:0 ""
+ ww1_aerial_demoralization_desc:0 "Following intense bombing raids and overwhelming suppression enemy forces gradually become demoralized, enabling a wider path to victory"
  ww1_flying_aces:0 "Flying Aces"
- ww1_flying_aces_desc:0 ""
+ ww1_flying_aces_desc:0 "With all areas of conflict come the best of the best; there is no difference in air combat. Extremely Skilled Pilots build points of success leading to greater drive for combat across the entire military."
  ww1_improved_training:0 "Improved Training"
- ww1_improved_training_desc:0 ""
+ ww1_improved_training_desc:0 "The air force further advances its ability to Militarize its population to fight more challenging threats of the time."
  ww1_night_operations:0 "Night Operations"
- ww1_night_operations_desc:0 ""
+ ww1_night_operations_desc:0 "With the riskiness of flying at night comes the ability to take advantage of ill-prepared enemy forces at night."
  ww1_army_air_corps:0 "Army Air Corps"
- ww1_army_air_corps_desc:0 ""
+ ww1_army_air_corps_desc:0 "Ground Forces further enhance cooperation and communication with the air force making the overall military more interlocked in battle." 
  ww1_independent_air_force:0 "Independent Air Force"
- ww1_independent_air_force_desc:0 ""
+ ww1_independent_air_force_desc:0 "Reliance on other air forces must stop to be effective in guiding our path."
  ww1_twilight_of_the_airship:0 "Twilight of the Airship"
- ww1_twilight_of_the_airship_desc:0 ""
+ ww1_twilight_of_the_airship_desc:0 "The pinnacle of Airship combat is at hand time to make full use of it while it lasts."
 
  
  motorised_infantry2:0 "Motorised Infantry"
