--- a/localisation/russian/equip_air_l_russian.yml
+++ b/localisation/russian/equip_air_l_russian.yml
@@ -37,9 +37,9 @@
  scout_plane_equipment_3_desc:0 "Разрабатывая самолеты специально для разведки с воздуха и дальней разведки, мы обеспечиваем себе регулярное поступление точных данных о намерениях и возможностях нашего противника."
  scout_plane_equipment_3_short:0 "Самолет-разведчик III"
  aerial_bombs:0 "Авиабомбы"
- aerial_bombs_desc:0 "Бомбу можно установить на самолет, чтобы сбросить ее сверху и поразить наземную цель. Теперь бомбы можно прикреплять к фюзеляжу, а не бросать вручную."
+ aerial_bombs_desc:0 "Бомбу можно установить на самолет, чтобы сбросить ее сверху и поразить наземную цель. Теперь бомбы можно прикреплять к фюзеляжу, а не бросать вручную. \n$allow_bomber_techs$"
  synchronizer:0 "Синхронизатор"
- synchronizer_desc:0 "Синхронизатор пушки или прерыватель - это устройство, позволяющее одномоторному самолету вести огонь из своего переднего вооружения по дуге вращающегося винта без попадания пуль в лопасти. Это позволяет наводить на цель не пушку, а самолет."
+ synchronizer_desc:0 "Синхронизатор пушки или прерыватель - это устройство, позволяющее одномоторному самолету вести огонь из своего переднего вооружения по дуге вращающегося винта без попадания пуль в лопасти. Это позволяет наводить на цель не пушку, а самолет.\n$allow_fighter_and_seaplane_techs$"
  allow_fighter_and_seaplane_techs:0 "Позволяет исследовать §YИстребитель§! и §YГидросамолет§!."
  allow_bomber_techs:0 "Позволяет исследовать §YЛегкий бомбардировщик§! и §YТяжелый бомбардировщик§!."
  fighter_equipment_0:0 "Ранний истребитель"
