--- a/localisation/russian/replace/replace_traits_l_russian.yml
+++ b/localisation/russian/replace/replace_traits_l_russian.yml
@@ -8,7 +8,7 @@
  fascist_demagogue:0 "Националист-демагог"
  fascist_demagogue_desc:0 "§LДвижимый стремлением объединить народ под властью сильного государства, этот политик делает упор на националистическую и милитаристскую риторику.§!"
  mobile_warfare_expert:0 "Эксперт по маневренному превосходству"
- mass_assault_expert:0 "Культ эксперта по наступлению"
+ mass_assault_expert:0 "Эксперт по культу наступления"
  tank_manufacturer:0 "Конструктор бронетехники"
  fast_tank_manufacturer:0 "Конструктор мобильной бронетехники"
  medium_tank_manufacturer:0 "Конструктор средней бронетехники"
