--- a/localisation/russian/state_names_l_russian.yml
+++ b/localisation/russian/state_names_l_russian.yml
@@ -796,7 +796,7 @@
  STATE_795: "Ваупес"
  STATE_796: "Канвондо"
  STATE_797: "Хванхэ"
- STATE_798: "Самоа"
+ STATE_798: "Германское Самоа"
  STATE_799: "Пхенчхан"
  STATE_800: "Кенги"
  STATE_801: "Чхунчхон"
