--- a/localisation/russian/ww1_events_l_russian.yml
+++ b/localisation/russian/ww1_events_l_russian.yml
@@ -9880,7 +9880,8 @@ BUL_FRA_alliance:0 "Franco-Bulgarian Alliance"
  ww1_portugal_news.1.t:0 "Революция в Португалии" 
  ww1_portugal_news.1.d_republic:0 "По примеру своей бывшей колонии, Бразилии, республиканцы в Португалии совершили переворот в монархии. Ряд просчетов монархии, в основном касающихся колоний и технологического развития, спровоцировал появление очень небольшой группы повстанцев, которая быстро заручилась поддержкой почти всех военных.\n\n Хотя проблемы, с которыми столкнулась монархия, вряд ли будут легко решены в ближайшее время, по крайней мере, гнев общественности на данный момент утих." 
  ww1_portugal_news.1.d_kingdom:0 "В Португалии произошла попытка переворота. Лидеры республиканцев объявили о начале революции, которая началась с массовых демонстраций. Армия была расколота, часть генералов встала на сторону республиканцев, но монархические силы оказали сопротивление.\n\n Король Мануэл II отказался отречься от престола и призвал верных подданных противостоять республиканскому мятежу. Началась гражданская война в Португалии." 
- ww1_portugal_news.1.a:0 "Монархи будьте осторожны." 
+ ww1_portugal_news.1.a:0 "Монархи будьте осторожны."
+ ww1_portugal_news.1.b: "We should be careful." 
  ww1_portugal_news.2.t:0 "Государственный переворот в Португалии [GetYear] года." 
  ww1_portugal_news.2.b:0 "Что станет с молодой республикой?" 
  ww1_portugal_news.3.t:0 "Revolução Nacional" 
