more feudal tree stuff

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -32,27 +32,6 @@
 
  solidify_control: "Solidify Control"
  solidify_control_desc: "Some tactful use of political power here and some resources there and we will remove our political obstacles; we may not be able to get rid of all of them, but even getting rid of some will clear our path and improve our political power in the long run."
- 
- # Feudal Decisions
- FEU_purchase_french_arms:0 "Purchase [FRA.GetFlag] French Arms"
- FEU_purchase_british_arms:0 "Purchase [ENG.GetFlag] British Arms"
- FEU_purchase_german_arms:0 "Purchase [GER.GetFlag] German Arms"
- FEU_purchase_french_support_equipment:0 "Purchase [FRA.GetFlag] French Support Equipment"
- FEU_purchase_british_support_equipment:0 "Purchase [ENG.GetFlag] British Support Equipment"
- FEU_purchase_german_support_equipment:0 "Purchase [GER.GetFlag] German Support Equipment"
- FEU_purchase_french_artillery:0 "Purchase [FRA.GetFlag] French Artillery"
- FEU_purchase_british_artillery:0 "Purchase [ENG.GetFlag] British Artillery"
- FEU_purchase_german_artillery:0 "Purchase [GER.GetFlag] German Artillery"
-
- FEU_diplomatic_effort:0 "Diplomatic Efforts"
- FEU_diplomatic_effort_to_france:0 "Diplomatic Effort to [FRA.GetFlag] [FRA.GetNameDef]"
- FEU_diplomatic_effort_to_britain:0 "Diplomatic Effort to [ENG.GetFlag] [ENG.GetNameDef]"
- FEU_diplomatic_effort_to_italy:0 "Diplomatic Effort to [ITA.GetFlag] [ITA.GetNameDef]"
- FEU_diplomatic_effort_to_russia:0 "Diplomatic Effort to [RUS.GetFlag] [RUS.GetNameDef]"
- FEU_diplomatic_effort_to_ussr:0 "Diplomatic Effort to [SOV.GetFlag] [SOV.GetNameDef]"
- FEU_diplomatic_effort_to_germany:0 "Diplomatic Effort to [GER.GetFlag] [GER.GetNameDef]"
- FEU_diplomatic_effort_to_austria_hungary:0 "Diplomatic Effort to [AUH.GetFlag] [AUH.GetNameDef]"
- FEU_diplomatic_effort_to_spain:0 "Diplomatic Effort to [SPR.GetFlag] [SPR.GetNameDef]"
 
  rus_demobilize_army_tt:0 "The §Y[RUS.getFlag][RUS.getAdjective]§! Army will Demobilize Itself in random states progressively."
  TGWR_under_max_battalions_limit:0 "§Y[ROOT.getFlag][ROOT.getAdjective]§! army is above max Battalion limit."
@@ -8418,7 +8397,31 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  spanish_flu_vaccine:0 "Has Flu vaccine"
  spanish_flu_vaccine_tt:0 "Vaccine has been developed"
  archduke_in_sarajevo:0 "Archduke in Sarajevo"
+
+ # Feudal Decisions
+ FEU_purchase_french_arms:0 "Purchase [FRA.GetFlag] French Arms"
+ FEU_purchase_british_arms:0 "Purchase [ENG.GetFlag] British Arms"
+ FEU_purchase_german_arms:0 "Purchase [GER.GetFlag] German Arms"
+ FEU_purchase_french_support_equipment:0 "Purchase [FRA.GetFlag] French Support Equipment"
+ FEU_purchase_british_support_equipment:0 "Purchase [ENG.GetFlag] British Support Equipment"
+ FEU_purchase_german_support_equipment:0 "Purchase [GER.GetFlag] German Support Equipment"
+ FEU_purchase_french_artillery:0 "Purchase [FRA.GetFlag] French Artillery"
+ FEU_purchase_british_artillery:0 "Purchase [ENG.GetFlag] British Artillery"
+ FEU_purchase_german_artillery:0 "Purchase [GER.GetFlag] German Artillery"
+
+ FEU_diplomatic_effort:0 "Diplomatic Efforts"
+ FEU_diplomatic_effort_to_france:0 "Diplomatic Effort to [FRA.GetFlag] [FRA.GetNameDef]"
+ FEU_diplomatic_effort_to_britain:0 "Diplomatic Effort to [ENG.GetFlag] [ENG.GetNameDef]"
+ FEU_diplomatic_effort_to_italy:0 "Diplomatic Effort to [ITA.GetFlag] [ITA.GetNameDef]"
+ FEU_diplomatic_effort_to_russia:0 "Diplomatic Effort to [RUS.GetFlag] [RUS.GetNameDef]"
+ FEU_diplomatic_effort_to_ussr:0 "Diplomatic Effort to [SOV.GetFlag] [SOV.GetNameDef]"
+ FEU_diplomatic_effort_to_germany:0 "Diplomatic Effort to [GER.GetFlag] [GER.GetNameDef]"
+ FEU_diplomatic_effort_to_austria_hungary:0 "Diplomatic Effort to [AUH.GetFlag] [AUH.GetNameDef]"
+ FEU_diplomatic_effort_to_spain:0 "Diplomatic Effort to [SPR.GetFlag] [SPR.GetNameDef]"
+
+FEU_end_illiteracy:0 "Fight Rampant Illiteracy"
  
+
  ENG_imperial_federation_coring:0 "Implementing the Imperial Federation"
  ENG_imperial_federation_coring_desc:0 "Following the formation of the Imperial Federation, we must reorganised and reactivate the old administrations to prevent any red tape and resistance."
  ENG_reestablish_administration:0 "Integrate Local Administrations"
