--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -481,6 +481,7 @@ FEU_reform_the_conscription:0 "Extend the Conscription System"
 FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
 FEU_utilize_our_strengths:0 "Use Everything We Have"
 FEU_fortify_capital:0 "Fortify [ROOT.Capital.GetCapitalVictoryPointName]"
+FEU_establish_military_academy:0 "Establish the [ROOT.GetAdjective] Military Acedamy"
 
 FEU_develop_capitalstate:0 "Develop [ROOT.capital.GetName]"
 FEU_pave_the_roads:0 "Pave the Roads"
@@ -492,6 +493,7 @@ FEU_promote_local_crafts:0 "Promote Local Crafts"
 FEU_literacy_programs:0 "Literacy Programs"
 FEU_basic_schools:0 "Basic Education"
 FEU_the_grand_university_of_capital:0 "The University of [ROOT.Capital.GetCapitalVictoryPointName]"
+FEU_expand_our_agriculture:0 "Expand Our Agriculture"
 
  ##########
 
