--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1922,6 +1922,7 @@ FEU_unstable_agriculture:0 "Unstable Agriculture"
 FEU_unstable_agriculture_desc:0 "With an unmodernised agricultural system, we still rely heavily on what the seasons will bring and all it takes to cause a shortage of food is a drier season then usual."
 FEU_mass_illiteracy:0 "Mass Illiteracy"
 FEU_mass_illiteracy_desc:0 "In our nation, most of the population are illiterate and can't read. This poses a signifcant problem as most of our population is uneducated on many basic things and limits us in many ways."
+FEU_efficent_farming_techniques_idea:0 "Expanded Agriculture"
 
  #UK
  ENG_Staff:0 "English Staff"
