--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8420,6 +8420,8 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  FEU_diplomatic_effort_to_spain:0 "Diplomatic Effort to [SPR.GetFlag] [SPR.GetNameDef]"
 
 FEU_end_illiteracy:0 "Fight Rampant Illiteracy"
+
+FEU_smuggle_guns:0 "Smuggle Guns"
  
 
  ENG_imperial_federation_coring:0 "Implementing the Imperial Federation"
