--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -482,6 +482,7 @@ FEU_names_finest:0 "[ROOT.GetAdjective] Cavalry"
 FEU_utilize_our_strengths:0 "Use Everything We Have"
 FEU_fortify_capital:0 "Fortify [ROOT.Capital.GetCapitalVictoryPointName]"
 FEU_establish_military_academy:0 "Establish the [ROOT.GetAdjective] Military Acedamy"
+FEU_smuggle_arms:0 "Smuggle Arms"
 
 FEU_develop_capitalstate:0 "Develop [ROOT.capital.GetName]"
 FEU_pave_the_roads:0 "Pave the Roads"
