--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -457,13 +457,20 @@ FRA_war_on_hainan_flag:0 "Is Planning to Invade Hainan"
 FRA_start_intervention_in_china:0 "Start Intervention in China"
 FRA_target_of_france:0 "Original Owner of Hainan"
 
-BUL_tighten_private_companies_control:0 "Tighten Private Companies Control"
-BUL_nationalize_foreign_industry:0 "Nationalize Foreign Industry"
-BUL_Complicate_investment_bureaucracy:0 "Complicate Investment Bureaucracy"
-BUL_counter_investments:0 "Counter Investments"
-BUL_vassalisation_augmentation:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get higher by §R1 Point§!."
-BUL_vassalisation_diminution:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G1 Point§!."
-BUL_vassalisation_diminution_3:0 "The [BUL.getFlag]§YBulgarian§! dependence toward [AUH.getFlag]§R[AUH.getName]§! will get lower by §G3 Points§!."
+#Bulgaria
+
+BUL_arms_purchases:0 "Arms Purchases"
+purchase_austrian_rifles:0 "Purchase Austrian Rifles"
+BUL_purchase_german_rifles:0 "Purchase German Rifles"
+BUL_purchase_russian_rifles:0 "Purchase Russian Rifles"
+BUL_purchase_french_rifles:0 "Purchase French Rifles"
+BUL_sue_for_peace_ROM:0 "Surrendur to Romania"
+BUL_sue_for_peace_TUR:0 "Surrendur to the Ottomans'
+
+#Balkan League
+
+balkan_league_dec:0 "Balkan League"
+SER_reach_out_MNT:0 "Reach out to Montenegro"
 
 AUH_civil_investments_in_BUL:0 "Civil Investments in Old Country"
 AUH_interests_in_bulgaria:0 "Interests in Bulgaria"
